--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/icons-material": "^5.10.3",
+		"@mui/material": "^5.10.4",
+		"@mui/styled-engine-sc": "^5.10.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"autoprefixer": "10.4.5",
+		"axios": "^0.27.2",
 		"bootstrap": "^5.1.3",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-select-search": "^3.0.10",
+		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
